updating css for layout issue

--- a/hitchwebapp/src/main/webapp/css/style.css
+++ b/hitchwebapp/src/main/webapp/css/style.css
@@ -268,7 +268,7 @@ body {
 }
 
 .delivery input[type=time] {
-  width: 10%;
+  width: 15%;
   padding: 5px;
   box-sizing: border-box;
   background-color: #8F56AF;
